add test script; commit TODO
As of now, not planning on pursing a golang fatcatd.

--- a/golang/TODO
+++ b/golang/TODO
@@ -9,9 +9,10 @@ x config
 x sentry
 x cobra command line parsing?
 x database creation and access
+x 404, not panic, when empty result
+- creator post
 - test framework
-- panic recovery middleware
-- 404, not panic, when empty result
 
 later:
+- panic recovery middleware
 - metrics
