--- a/rust/TODO
+++ b/rust/TODO
@@ -1,4 +1,4 @@
-- re-generate OpenAPI
+x re-generate OpenAPI
     => using whatever sagger-codegen 2.3.1 (stable?)
     => take iron example from older generator 2.3.1 (iron)
     => cargo swagger (docker) seems to only use latest
