--- a/TODO
+++ b/TODO
@@ -15,12 +15,14 @@ name ref: https://www.w3.org/International/questions/qa-personal-names
 
 - full database dump and reload (import/export)
 - manual editing of containers and releases (web interface)
-x bulk loading of releases, files, containers, creators
-x accurate auto-matching matching of containers (eg, via ISSN)
+
+## Web UI
+
+- changelog more like a https://semantic-ui.com/views/feed.html ?
+- instead of grid, maybe https://semantic-ui.com/elements/rail.html
 
 ## Performance
 
-x have release creation auto-create works if one isn't specified
 - write pure-rust "benchmark" scripts that hit, eg, lookups and batch
   endpoints. run these with auto_explain on, then look in logs on dev machine
 - batch inserts automerge: create editgroup and changelog, mark all edits as
