--- a/TODO
+++ b/TODO
@@ -1,37 +1,42 @@
 
 ## Next Up
 
-- some significant slow-down has happened? transactions, or regexes?
+summer roadmap:
+- PUT/UPDATE, DELETE, and merge code paths
+- faster UPDATE-free bulk import code path
+- container import (extra?): lang, region, subject
+- basic API+webface creation, editing, merging, editgroup approval
+- elastic schema/transform for releases; bulk and continuous scripts
 
 features:
 - fast database dump command: both changelog-based and entity-based (rust)
     => lighter, more complete dumps for each entity type?
+- guide skeleton (mdbook; guide.fatcat.wiki)
 
 importers:
+- CORE
+- wikidata cross-ref (if they have a dump)
 - manifest: multiple URLs per SHA1
-- pubmed (medline)
+- pubmed (medline), if not in CORE
     => and/or, use pubmed ID lookups on crossref import
-- core
 - semantic scholar (up to 39 million; author de-dupe)
-- wikidata (if they have a dump)
 
 bugs:
 - test: release pointing to a collection that has been deleted/redirected
   => UI crash?
 
-july roadmap:
-- complete and test this round of schema changes
-- container import (extra?): lang, region, subject
-- re-run imports
-- basic API+webface creation, editing, merging, editgroup approval
-- elastic schema/transform for releases; bulk and continuous scripts
-
 ## Schema / Alignment / Scope
 
 - "container" -> "venue"?
-- release_type, release_status, url.rel enums (and others?)
+- release_type, release_status, url.rel write-time schema(and others?)
 
 name ref: https://www.w3.org/International/questions/qa-personal-names
+
+## API
+
+- how to send edit "extra" metadata?
+- hydrate entities in API
+    ? "expand" query param
 
 ## High-Level Priorities
 
@@ -49,11 +54,6 @@ name ref: https://www.w3.org/International/questions/qa-personal-names
   endpoints. run these with auto_explain on, then look in logs on dev machine
 - batch inserts automerge: create editgroup and changelog, mark all edits as
   accepted, all in a single transaction
-
-## API
-
-- hydrate entities in API
-    ? "expand" query param
 
 ## Other
 
